--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -5,7 +5,11 @@ $header_h: 600px;
   position: relative;
   &__bg {
     width: 100%;
+    height: 1325px;
+    background-image: url('/assets/img/header.png');
     position: absolute;
+    background-position: center top;
+    background-size: cover;
     top: 0px;
     left: 0px;
   }
