--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -6,7 +6,7 @@ block variables
 block content
   .wrapper
     .l-header
-      img.l-header__bg(src='/assets/img/header.png')
+      .l-header__bg
       .l-header__color-filter
       svg.l-header__portfolio
         use(xlink:href='assets/img/sprite.svg#portfolio_header')
@@ -22,14 +22,47 @@ block content
       svg.l-header__arrow
         use(xlink:href='assets/img/sprite.svg#portf_arrow_down')
     .l-content
-      .l-content__half-block.c-half-block_left
+      .c-half-block.c-half-block_left
         svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-half-block__triangle
           polygon(points="0,0 0,100 1000,100")
         .c-half-block__title Обо мне
         svg.c-half-block__title-bg
           use(xlink:href='assets/img/sprite.svg#about_header')
+        .c-half-block__pic
+        .c-half-block__subtitle Кто я
+        .c-half-block__description
+          p Я веб разработчик из Москвы. Мне 26 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+          p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
 
-
-      .l-content__half-block
+      .c-half-block
         svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-half-block__triangle
           polygon(points="1000,0 1000,100 0,100")
+        .c-half-block__subtitle Чем я могу быть вам полезен
+        .c-half-block__description
+          p Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
+        h2.c-half-block__h3.c-half-block__h3_mtop Frontend
+        ul.c-half-block__skills
+          li.c-skills__skill
+            +skill(85,'HTML5')
+          li.c-skills__skill
+            +skill(80,'CSS3')
+          li.c-skills__skill
+            +skill(90,'JavaScript & jQuery')
+        h2.c-half-block__h3 Backend
+        ul.c-half-block__skills
+          li.c-skills__skill
+            +skill(40,'PHP')
+          li.c-skills__skill
+            +skill(55,'mySQL')
+          li.c-skills__skill
+            +skill(60,'Node.js & npm')
+          li.c-skills__skill
+            +skill(60,'Mongo.db')
+        h2.c-half-block__h3 WorkFlow
+        ul.c-half-block__skills
+          li.c-skills__skill
+            +skill(90,'Git')
+          li.c-skills__skill
+            +skill(65,'Gulp')
+          li.c-skills__skill
+            +skill(40,'Bower')
