second page is done!!!!

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -49,3 +49,5 @@ body,html {
 @import 'common/welcome';
 @import 'common/about';
 @import 'common/skills';
+@import 'common/contacts';
+@import 'common/footer';
