--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -15,8 +15,8 @@ block content
               {icon:"in",link:"http://linked.in"}
           ])
       ul.l-welcome-box__welcome-buttons
-        +menuItem('l-welcome-buttons__button',[{title: "Мои работы", link: "works.html"}, {
+        +menuItem('l-welcome-buttons__button','c-button__link',[{title: "Мои работы", link: "works.html"}, {
             title: 'Обо мне',
             link: 'about.html'
         }, {title: 'Блог', link: 'blog.html'}])
-    .l-copy © Павел Мирошин | создано с любовью в LoftSchool | 2017
+    .c-copy.c-copy_welcome-copy © Павел Мирошин | создано с любовью в LoftSchool | 2017
