--- a/source/style/common/welcome.scss
+++ b/source/style/common/welcome.scss
@@ -35,11 +35,13 @@
   color: inherit;
 }
 
-.l-copy {
+.c-copy {
   position: absolute;
-  bottom: 10px;
-  @include centeredX();
   color: #fff;
   font-family: "Roboto Light";
   font-size: 16px;
+  .c-copy_welcome-copy {
+    bottom: 10px;
+    @include centeredX();
+  }
 }
