--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -25,8 +25,8 @@ block content
       .c-half-block.c-half-block_left
         svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-half-block__triangle
           polygon(points="0,0 0,100 1000,100")
-        .c-half-block__title Обо мне
-        svg.c-half-block__title-bg
+        .c-title Обо мне
+        svg.c-title-bg
           use(xlink:href='assets/img/sprite.svg#about_header')
         .c-half-block__pic
         .c-subtitle Кто я
