--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -5,7 +5,8 @@ block variables
 
 block content
   .l-background
-    .l-auth-button Авторизоваться
+    .l-auth-block
+      .l-auth-block__button Авторизоваться
     .l-welcome-box
       .l-welcome-box__content
         +hero('c-hero_theme_dark')
