--- a/source/style/common/about.scss
+++ b/source/style/common/about.scss
@@ -31,19 +31,15 @@
 .l-map {
   height: 972px;
   width: 100%;
-  background-image: url('/assets/img/map.png');
-  background-position: center top;
   position: relative;
+  .c-maps {
+    position: absolute;
+    top:0px;
+    width: 100%;
+    height: 100%;
+  }
   .c-contacts {
     position: absolute;
     @include centered();
-  }
-  &__point {
-    position: absolute;
-    width: 30px;
-    height: 40px;
-    fill: $main_color;
-    top: 462px;
-    right: calc(626px - ((2317px - 100%) / 2));
   }
 }
