--- a/source/style/common/welcome-box.scss
+++ b/source/style/common/welcome-box.scss
@@ -1,6 +1,8 @@
 .l-welcome-box {
-  position: absolute;
-  @include centered();
+  //position: absolute;
+  //gu@include centered();
+
+  align-self: center;
 
   &__content {
     padding-top: 40px;
@@ -16,7 +18,6 @@
   }
 
   &__welcome-buttons {
-
     list-style:none;
     height: 45px;
     color:#fff;
@@ -24,17 +25,16 @@
     font-size: 16px;
     margin: 0px;
     padding:0px;
-    display: block;
-    width: 100%;
+    display: flex;
     .l-welcome-buttons__button {
-      display: block;
-      float:left;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
       margin: 0px;
       cursor: pointer;
       transition: .5s;
-      border-left: 2px solid transparentize(#dee3e7, .5);
-      background:  transparentize($main_color, .15);
-      padding:14px 0px;
+      border-left: 2px solid rgba(#dee3e7, .5);
+      background:  rgba($main_color, .85);
       &:first-child {
         border-radius: 0px 0px 0px 4px;
         border-left:none;
@@ -43,7 +43,7 @@
         border-radius: 0px 0px 4px 0px;
       }
       &:hover {
-        background: transparentize($hover_main_color, .15);
+        background: rgba($hover_main_color, .85);
       }
     }
   }
