--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -66,14 +66,14 @@ block content
             +skill(65,'Gulp')
           li.c-skills__skill
             +skill(40,'Bower')
+    include ../common/map
     .l-map
-      svg.l-map__point
-        use(xlink:href='assets/img/sprite.svg#map_marker')
+      .c-maps#c-maps
       .c-contacts
         .c-subtitle Контакты
         ul.c-contacts__contact-list
           +contactList('skype','skype:virtuoz2142','virtuoz2142')
           +contactList('envelope','mailto:mps@retailasp.ru','mps@retailasp.ru')
           +contactList('phone','tel:+78005553535','8 800 555 35 35')
-          +contactList('map_marker','https://yandex.ru/maps/?text=г.Новосибирск%2C%20ул.%20Инская%2C%20д.%205','г.Новосибирск, ул. Инская, д. 5')
+          +contactList('map_marker','https://yandex.ru/maps/?text=г.Москва%2C%20Пыжевский%20пер.%2C%20д.%205','г.Москва, Пыжевский пер., д. 5')
   include ../common/footer
