--- a/source/template/common/map.pug
+++ b/source/template/common/map.pug
@@ -1,4 +1,4 @@
-script(src='https://maps.googleapis.com/maps/api/js?key=&extension=.js')
+script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAqQSxMBVFKqRZ_EbLwPC01TpfY7rgRUuc&extension=.js')
 script(src='https://cdn.mapkit.io/v1/infobox.js')
 link(href='https://fonts.googleapis.com/css?family=Roboto:300,400', rel='stylesheet')
 link(href='https://cdn.mapkit.io/v1/infobox.css', rel='stylesheet')
