--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -9,7 +9,7 @@ block content
       .l-auth-block__button Авторизоваться
     .l-welcome-box
       .l-welcome-box__content
-        +hero('c-hero_theme_dark')
+        +hero('c-hero_theme_dark',true)
         .c-socials.c-socials_welcome
           +socials([{icon:"vk",link:"http://vk.com"},
               {icon:"github",link:"http://github.com"},
