--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -19,7 +19,7 @@ block content
       svg.c-header__menu
         use(xlink:href='assets/img/sprite.svg#hamburger')
       .l-header__hero
-        +hero('c-hero_theme_light')
+        +hero('c-hero_theme_light',true)
       svg.l-header__arrow
         use(xlink:href='assets/img/sprite.svg#portf_arrow_down')
     .c-full-block
