--- a/source/template/common/_mixins.pug
+++ b/source/template/common/_mixins.pug
@@ -7,11 +7,12 @@ mixin socials(items)
         a.c-socials__social-icon(href=`${item['link']}` target="_blank")
             svg.c-social-icon__svg
                 use(xlink:href=`assets/img/sprite.svg#${item['icon']}`)
-mixin hero(className)
+mixin hero(className,needFIO)
     .c-hero(class=`${className}`)
         img.c-hero__image(src='assets/img/hero.png')
-        .c-hero__title Павел Мирошин
-        .c-hero__sub-title Личный сайт веб разработчика
+        if(needFIO == true)
+            .c-hero__title Павел Мирошин
+            .c-hero__sub-title Личный сайт веб разработчика
 mixin skill(proc,name)
     svg.skill-circle(width='110', height='110')
         circle.skill-circle__first(r='45', cx='50%', cy='50%', fill='none')
