--- a/source/style/common/welcome-box.scss
+++ b/source/style/common/welcome-box.scss
@@ -1,8 +1,6 @@
 .l-welcome-box {
-  //position: absolute;
-  //gu@include centered();
-
-  align-self: center;
+  margin-bottom: auto;
+  margin-top: auto;
 
   &__content {
     padding-top: 40px;
