--- a/source/template/common/footer.pug
+++ b/source/template/common/footer.pug
@@ -7,7 +7,7 @@ footer.footer
             }, {title: 'Блог', link: 'blog.html'},
                 {
                     title: 'Авторизация',
-                    link: '#'}])
+                    link: 'index.html'}])
 
         .footer__socials
             +socials([{icon: "vk", link: "http://vk.com"},
